kubernetes/dataextractor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dataextractor
  labels:
    app: dataextractor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dataextractor
  template:
    metadata:
      labels:
        app: dataextractor
    spec:
      containers:
        - name: dataextractor
          image: embedit/dataextractor:1.0
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: dataextractor
  labels:
    app: dataextractor
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: dataextractor
